Exchange may deadlock when consumers do not exhaust their input cursors.

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.6
    • Affects Version/s: None
    • Component/s: Aggregation Framework
    • None
    • Fully Compatible
    • ALL
    • Hide

      Exc

      Show
      Exc
    • Query 2018-12-03
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Once any one consumer has stopped consuming results from an exchange (AKA it has called Exchange::dispose()), it's possible for any other consumer to hang indefinitely, since it would possibly need to wait for that consumer to consume the results in its buffer.

            Assignee:
            Martin Neupauer (Inactive)
            Reporter:
            Martin Neupauer (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: