SERVER-37992 Exchange may deadlock when consumers do not exhaust their input cursors.